--- a/README.org
+++ b/README.org
@@ -60,9 +60,11 @@ e.g.
   ank ~ lrn
   car|trn ~ tvl
   cde&wrk ~ prd cmp
+  tvy&!slp ~ tva
 #+END_SRC
 means that each ~ank~ (Anki) tag triggers a ~lrn~ (Learn) tag, each ~car~ or ~trn~ (Train) tag triggers a ~tvl~ (Travel) tag, 
 and each ~cde~ (Coding) and simultaneous ~wrk~ (Work) tag triggers both a ~prd~ (productive) tag as well as a ~cmp~ (Computer) tag.
+The last line means that each ~tvy~ (TV) tag triggers a ~tva~ (TV active) tag if there is no ~slp~ (sleep) tag at the same timestamp.
 Right now in on line ony | or & are allowed.
 
 I will maybe implement more complex rules in the future
